@@ -1,6 +1,9 @@
 #Antlr4
 gen
 
+#Maven
+dependency-reduced-pom.xml
+
 #Crashing eclipse
 hs_err_pid*.log
 tmp
