@@ -265,6 +265,7 @@
     <module>analyzer</module>
     <module>udfs</module>
     <module>webapp</module>
+    <module>commandline</module>
     <module>benchmarks</module>
   </modules>
 
