@@ -125,5 +125,6 @@ v1.4
 - Fixed class of broken useragents.
 - Fixed false positive "Honor Note" matches SQL fragment "OR NOT"
 - Detect Coc Coc Browser
+- Improved commandline tool
 
 
